fixed z-index

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -149,7 +149,7 @@ a
   color: #fff
   background: rgba(52, 58, 64, 0.5)
   line-height: 50px
-  z-index: 3
+  z-index: 5
 
 .scroll-to-top:focus,
 .scroll-to-top:hover
